# face2pheno

./: LICENSE  Makefile  README.md  notes.txt  pyproject.toml
data/processed/: adjacent_triangles.csv  face_mesh_adjacency_list.json  triangles_list.csv  triangles_list_super_node.csv
data/processed/landmark_pixel_coordinates/: 100_0_0_20170112213500903.jpg.chip_landmarks_pixels.txt  100_0_0_20170112215240346.jpg.chip_landmarks_pixels.txt  100_1_0_20170110183726390.jpg.chip_landmarks_pixels.txt  100_1_0_20170112213001988.jpg.chip_landmarks_pixels.txt  100_1_0_20170112213303693.jpg.chip_landmarks_pixels.txt  (+22972 more)
docs/: mkdocs.yml
docs/docs/: index.md
models/: adjacency_list_genarator.py  mediapipe_pixle_generator.py  triangle_builder_original.py  triangle_builder_wrong.py
notebooks/: datacheck.ipynb
results/: classification_report_test.txt  k8_multi_class_classification_report.txt  kernels_20251020_205542.txt  model2_multi_class_classification_report.txt  model3_classification_report.txt  super_node_K16_multi_class_classification_report.txt  super_node_k16__classification_report_test.txt
results/kernel_activations/: model2_patch_size_8_classification_report.txt  patch_to_kernel_distribution_20251006_122532.txt  patch_to_kernel_distribution_20251007_100921.txt  patch_to_kernel_distribution_20251020_083349.txt  patch_to_kernel_distribution_full.txt
src/: analyze_activations.py  config.py  dataset.py  evaluation.py  main.py  model_1.py  model_2.py  model_3.py  model_4.py  model_test.py  plot_distributions.py  utils.py
(+110 files in other folders)
