[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "face2pheno"
version = "0.0.1"
description = "face2pheno: ontology of visual facial features generator"
authors = [
  { name = "Ranga Baminiwatte" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["face2pheno"]
include = ["pyproject.toml", "face2pheno/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["face2pheno"]
force-sort-within-sections = true

